# ReloadedCode

./: .gitignore  .gitmodules  AGENTS.md  PR.md  README.MD
src/: AGENTS.md  Cargo.toml
src/.cargo/: verify.ps1  verify.sh
src/coding-tools-core/: Cargo.toml  README.md
src/coding-tools-core/src/: lib.rs
src/coding-tools-rig/: Cargo.toml
src/docs/src/: architecture.md  examples.md  hooks.md
src/llm-coding-tools-agents/: Cargo.toml  README.md
src/llm-coding-tools-agents/benches/: parser.rs  runtime_task.rs
src/llm-coding-tools-agents/benches/fixtures/: orchestrator-quality-gate-gpt5.md
src/llm-coding-tools-agents/src/: catalog.rs  config.rs  error.rs  extensions.rs  lib.rs  loader.rs  parser.rs  permission.rs  registry.rs  task.rs
src/llm-coding-tools-agents/src/parser/: mod.rs  preprocessor.rs
src/llm-coding-tools-agents/src/path/: resolver.rs
src/llm-coding-tools-agents/src/runtime/: builder.rs  mod.rs  model.rs  state.rs  task.rs
src/llm-coding-tools-agents/src/types/: config.rs  tool_settings.rs
src/llm-coding-tools-bubblewrap/: ARCHITECTURE.md  Cargo.toml
src/llm-coding-tools-bubblewrap/src/: probe.rs
src/llm-coding-tools-bubblewrap/src/profile/: factory.rs  types.rs
src/llm-coding-tools-core/: Cargo.toml  README.md
src/llm-coding-tools-core/benches/: model_catalog_builder.rs  path_resolvers.rs  permissions.rs
src/llm-coding-tools-core/src/: error.rs  lib.rs  permissions.rs  permissions_ext.rs  preamble.rs  system_prompt.rs  util.rs
src/llm-coding-tools-core/src/context/: bash.txt  edit_absolute.txt  edit_allowed.txt  git_workflow.txt  github_cli.txt  glob_absolute.txt  glob_allowed.txt  grep_absolute.txt  grep_allowed.txt  read_absolute.txt  read_allowed.txt  task.txt  todowrite.txt  webfetch.txt  write_absolute.txt  write_allowed.txt
src/llm-coding-tools-core/src/fs/: blocking_impl.rs  mod.rs  tokio_impl.rs
src/llm-coding-tools-core/src/internal/: hash63.rs
src/llm-coding-tools-core/src/models/: mod.rs
src/llm-coding-tools-core/src/operations/: glob.rs  grep.rs  mod.rs  task.rs
src/llm-coding-tools-core/src/path/: absolute.rs  allowed.rs  mod.rs
src/llm-coding-tools-core/src/tools/: edit.rs  glob.rs  grep.rs  read.rs  write.rs
src/llm-coding-tools-models-dev/: Cargo.toml  README.md  build.rs
src/llm-coding-tools-models-dev/data/: models.dev.min.json
src/llm-coding-tools-models-dev/src/: error.rs  lib.rs
src/llm-coding-tools-models-dev/src/api/: catalog_sources.rs  schema.rs
src/llm-coding-tools-models-dev/src/cache/: format.rs  mod.rs  path.rs  payload.rs
src/llm-coding-tools-models-dev/src/catalog/: load_cache.rs  mod.rs  sync.rs
src/llm-coding-tools-models-dev/tests/: public_api.rs
src/llm-coding-tools-rig/: Cargo.toml  README.md
src/llm-coding-tools-rig/examples/: registry-driven-task-rig.rs  rig-agents.rs  rig-basic.rs  rig-sandboxed.rs
src/llm-coding-tools-rig/src/: bash.rs  lib.rs  registry.rs  task.rs  tool_catalog.rs  webfetch.rs
src/llm-coding-tools-rig/src/absolute/: grep.rs
src/llm-coding-tools-rig/src/allowed/: glob.rs  grep.rs
src/llm-coding-tools-rig/src/task/: mod.rs  tests.rs
src/llm-coding-tools-serdesai/: Cargo.toml  README.md
src/llm-coding-tools-serdesai/examples/: registry-driven-task-serdesai.rs  sandboxed.rs  serdesai-agents.rs  serdesai-basic.rs  serdesai-sandboxed.rs  serdesai-task.rs
src/llm-coding-tools-serdesai/examples/agents/: file-reader.md  orchestrator.md  reader.md
src/llm-coding-tools-serdesai/src/: agent_ext.rs  bash.rs  convert.rs  lib.rs  model_resolver.rs  registry.rs  schema.rs  task.rs  todo.rs  tool_catalog.rs  webfetch.rs
src/llm-coding-tools-serdesai/src/absolute/: glob.rs  grep.rs
src/llm-coding-tools-serdesai/src/agent_runtime/: build.rs  task.rs
src/llm-coding-tools-serdesai/src/allowed/: edit.rs  glob.rs  grep.rs  read.rs  write.rs
src/llm-coding-tools-serdesai/src/common/: glob.rs  grep.rs  mod.rs
src/llm-coding-tools-serdesai/src/task/: handle.rs  mod.rs  tests.rs
src/llm-coding-tools-serdesai/src/tools/: edit.rs  glob.rs  grep.rs  mod.rs  read.rs
src/llm-coding-tools-serdesai/tests/: recursive_task_delegation_integration.rs  registry_integration.rs
src/llm-coding-tools-subagents/: Cargo.toml  README.md
src/llm-coding-tools-subagents/benches/: frontmatter.rs  parser.rs
src/llm-coding-tools-subagents/src/: config.rs  error.rs  frontmatter.rs  lib.rs  loader.rs  parser.rs  permission.rs  registry.rs  task.rs
src/reloaded-code-agents/: README.md
src/reloaded-code-agents/src/runtime/: builder.rs
src/reloaded-code-core/src/hooks/: builder.rs  hook_set.rs  mod.rs
src/reloaded-code-serdesai/: Cargo.toml
src/reloaded-code-serdesai/examples/hooks/: run-hook-chain.rs  run-start-end.rs
src/reloaded-code-serdesai/src/agent_runtime/: build.rs  task.rs
src/rig-coding-tools/: Cargo.toml
src/rig-coding-tools/src/tools/: read.rs
(+42 files in other folders)
