
[workspace]
resolver = "2"
members = ["llm-coding-tools-core", "llm-coding-tools-serdesai", "llm-coding-tools-agents", "llm-coding-tools-models-dev"]

[patch.crates-io]
serdes-ai = { path = "../serdesAI/serdes-ai" }
serdes-ai-agent = { path = "../serdesAI/serdes-ai-agent" }
serdes-ai-core = { path = "../serdesAI/serdes-ai-core" }
serdes-ai-models = { path = "../serdesAI/serdes-ai-models" }
serdes-ai-providers = { path = "../serdesAI/serdes-ai-providers" }
serdes-ai-streaming = { path = "../serdesAI/serdes-ai-streaming" }
serdes-ai-tools = { path = "../serdesAI/serdes-ai-tools" }

# Profile Build
[profile.profile]
inherits = "release"
strip = false           # symbols are needed for good profile data
debug = true
split-debuginfo = "off" # Some tools on Linux expect embedded symbols, e.g. cargo flamegraph. Keep them together.

# Benchmark Build
[profile.bench]
inherits = "profile"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"            # Automatically strip symbols from the binary
# Ensure that on Linux, you get separate .dwp files , in same vein you get .pdb on Windows.
debug = "full"
split-debuginfo = "packed"
