[package]
name = "llm-coding-tools-models-dev"
version = "0.1.0"
edition = "2021"
description = "Bundled models.dev catalog snapshot and lookup API"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "data/**/*", "build.rs", "README.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
] }
tokio = { version = "1.49", features = ["fs", "io-util", "rt", "macros", "sync"] }
zstd = "0.13"

[build-dependencies]
zstd = "0.13"

[dev-dependencies]
tokio = { version = "1.49", features = ["rt", "macros", "sync"] }
tempfile = "3.24"
wiremock = "0.6"

[[bin]]
name = "models-dev-update"
path = "src/bin/models-dev-update.rs"
